--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
           <div class="r-time3"><span class="time00"></span><span class="time00"></span></div>
           <div class="r-distance"><span class="distance00"></span><span class="distance10"></span><span class="distance20"></span><span class="distance30"></span><span class="distance40"></span><span class="distance50"></span></div>
           <div class="r-share">
-              <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;pic=http%3a%2f%2ffp2013.porsche-event.cn%2fshare.jpg" title="分享到新浪微博" class="sina"></a>
-              <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
-              <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
-              <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http%3a%2f%2ffp2013.porsche-event.cn%2fshare.jpg" title="分享到QQ微博" class="qqwb"></a>
-              <a target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
-              <a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
+              <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2935559718" title="分享到新浪微博" class="sina"></a>
+              <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
+              <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
+              <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
+              <a target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
+              <a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
           </div>
           <div class="r-close"></div>
           <div class="r-list">
@@ -191,16 +191,16 @@
             <img src="images/cardot.png" class="b-robot" id="robot-dot" />
           </div>
           <div class="board-m-b">
-            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a id="official-site" href="javascript:void(0);">保时捷官网</a><a id="ranking" href="javascript:void(0);">排行榜</a>
+            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a id="official-site" href="http://www.porsche.com/china/">保时捷官网</a><a id="ranking" href="javascript:void(0);">排行榜</a>
           </div>
           <span class="board-r" id="share-btn">分享</span>
           <div class="board-share" id="share-con">
-              <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;pic=http%3a%2f%2ffp2013.porsche-event.cn%2fshare.jpg" title="分享到新浪微博" class="sina"></a>
-              <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
-              <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
-              <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http%3a%2f%2ffp2013.porsche-event.cn%2fshare.jpg" title="分享到QQ微博" class="qqwb"></a>
-              <a target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
-              <a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http%3a%2f%2ffp2013.porsche-event.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
+              <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2935559718" title="分享到新浪微博" class="sina"></a>
+              <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
+              <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
+              <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
+              <a target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
+              <a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
           </div>
         </div>
         <img src="images/p-bg-r.png" id="main-board-bg-r" class="main-board-bg-r" />
