--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <img src="images/cardot.png" class="b-robot" id="robot-dot" />
           </div>
           <div class="board-m-b">
-            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a id="official-site" href="http://www.porsche.com/china/">保时捷官网</a><a id="ranking" href="javascript:void(0);">排行榜</a>
+            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a target="_blank" id="official-site" href="http://www.porsche.com/china/">保时捷官网</a><a id="ranking" href="javascript:void(0);">排行榜</a>
           </div>
           <div id="share-wrap">
             <span class="board-r" id="share-btn">分享</span>
@@ -208,11 +208,11 @@
         <img src="images/p-bg-r.png" id="main-board-bg-r" class="main-board-bg-r" />
       </div>
       <div class="main-bottom">
-        <a href="">©2013保时捷中国 法律公告</a>
+        <a target="_blank" href="http://www.porsche.com/china/">©2013保时捷中国</a> <a target="_blank" href="http://www.porsche.com/china/zh/legal-notice/">法律公告</a>
       </div>
       <div id="login-status"></div>
       <div class="main-cars">
-        <div class="car">
+        <div class="car my-car">
           <img src="images/car.png" />
           <div class="front-wheel"></div>
           <div class="end-wheel"></div>
