updated weibo key

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="lpn-register">
-          <a href="https://api.weibo.com/oauth2/authorize?client_id=2935559718&redirect_uri=http%3A%2F%2F50years911.porsche-events.cn%2Fdev%2Fdata%2Fpublic%2Findex.php%2Fhome%2Fcallback&response_type=code" class="login-weibo"></a>
+          <a href="https://api.weibo.com/oauth2/authorize?client_id=2935559718&redirect_uri=http%3A%2F%2F50years911.porsche-events.cn%2Fdata%2Fpublic%2Findex.php%2Fhome%2Fcallback&response_type=code" class="login-weibo"></a>
           <a href="javascript:void(0);" class="login-local"></a>
       </div>
     </section>
@@ -112,12 +112,12 @@
           <div class="r-time3"><span class="time00"></span><span class="time00"></span></div>
           <div class="r-distance"><span class="distance00"></span><span class="distance10"></span><span class="distance20"></span><span class="distance30"></span><span class="distance40"></span><span class="distance50"></span></div>
           <div class="r-share">
-              <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2935559718" title="分享到新浪微博" class="sina"></a>
-              <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
-              <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
-              <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
-              <a target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
-              <a target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
+              <a id="share_sina" target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2455498088" title="分享到新浪微博" class="sina"></a>
+              <a id="share_qzone" target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
+              <a id="share_kaixin" target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
+              <a id="share_qq" target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
+              <a id="share_renren" target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
+              <a id="share_sohu" target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
           </div>
           <div class="r-close"></div>
           <div class="r-list">
@@ -196,7 +196,7 @@
           <div id="share-wrap">
             <span class="board-r" id="share-btn">分享</span>
             <div class="board-share" id="share-con">
-                <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2935559718" title="分享到新浪微博" class="sina"></a>
+                <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2455498088" title="分享到新浪微博" class="sina"></a>
                 <a target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
                 <a target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
                 <a target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
