--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     src="./lib/sea/sea-debug.js"
     data-config="../../app/config"
     data-main="../../app/main"></script>
-  <!--[if lt IE 9]><script>for(var a=['section','article','nav','header','footer','aside'],i=0,j=a.length;i<j;++i){document.createElement(a[i]);}</script><![endif]-->
+  <!--[if lt IE 9]><script>for(var a=['section','article','nav','header','footer','aside'],i=0,j=a.length;i<j;++i){document.createElement(a[i]);}</script>
+  <style type="text/css">
+    .vml{behavior:url(#default#VML);display:inline-block;background:red;}
+  </style>
+  <![endif]-->
   <!--[if IE 6]>
   <script type="text/javascript" src="./src/DD_belatedPNG_0.0.8a-min.js"></script>
   <script type="text/javascript">
