--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     data-main="../../app/main"></script>
   <!--[if lt IE 9]><script>for(var a=['section','article','nav','header','footer','aside'],i=0,j=a.length;i<j;++i){document.createElement(a[i]);}</script>
   <style type="text/css">
-    .vml{behavior:url(#default#VML);display:inline-block;background:red;}
+    .vml{behavior:url(#default#VML);display:inline-block;}
   </style>
   <![endif]-->
   <!--[if IE 6]>
@@ -58,6 +58,7 @@
       </div>
     </section>
     <!--login panel-->
+    <!--
     <section id="login-mask" style="display:none;" class="login-panel lpn-mask">
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
@@ -79,6 +80,7 @@
           <a href="javascript:void(0);" class="login-local"></a>
       </div>
     </section>
+    -->
     <!--video panel-->
     <section id="video-mask" class="video-mask lpn-mask">
       <span class="lpn-ghost"></span>
@@ -95,43 +97,66 @@
         <div class="lpn-panel">
             <div class="ranking">
                 <div class="r-close"></div>
-                <div class="r-list">
+                <div class="r-head">
+                  <div class="btn selected">6月份<div class="btn-r"></div></div>
+                  <div class="btn">7月份<div class="btn-r"></div></div>
+                  <div class="btn">8月份<div class="btn-r"></div></div>
+                  <span class='r-head-title'>排行榜</span>
                 </div>
-                <div class="r-slider">
-                    <hr>
-                    <hr>
-                    <hr>
+                <div class="r-list">
                 </div>
             </div>
         </div>
     </section>
 
     <!--result panel-->
-    <section id="result-mask" style="display:none;" class="result-mask lpn-mask">
+    <section id="result-mask" class="result-mask lpn-mask">
       <span class="lpn-ghost"></span>
-      <div class="lpn-panel">
+      <div class="lpn-panel" style="height:auto;">
         <div class="result">
-          <div class="r-time1"><span class="time00"></span><span class="time00"></span></div>
-          <div class="r-time2"><span class="time00"></span><span class="time00"></span></div>
-          <div class="r-time3"><span class="time00"></span><span class="time00"></span></div>
-          <div class="r-distance"><span class="distance00"></span><span class="distance10"></span><span class="distance20"></span><span class="distance30"></span><span class="distance40"></span><span class="distance50"></span></div>
+          <div class="result-head">
+            <span class="time1 time00"></span><span class="time2 time10"></span>
+            <span class="time3 time00"></span><span class="time4 time10"></span>
+            <span class="time5 time00"></span><span class="time6 time10"></span>
+          </div>
+          <div class="result-con">
+            <div class="result-tit" style="display:none;">
+                <strong>恭喜您！</strong>
+                <ul>
+                    <li>获得保时捷独家送出50周年限量版明信片。</li>
+                    <li>每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值xx万。</li>
+                    <li>为确保能把奖品及时准确送到，请将个人信息填写完整。</li>
+                </ul>
+                <div class="btn1 btn-agian" style="margin-top: 11px;margin-left: -21px;margin-right: 30px;">再玩一次</div>
+                <div class="btn1 btn-submit" style="margin-top: 11px;">提交信息</div>
+            </div>
+            <form class="result-form" style="display:none;">
+                <label>姓名：<input name="name" type="text"></label>
+                <label>手机：<input name="tel" type="text"></label>
+                <label>邮箱：<input name="email" type="text"></label>
+                <label>邮编：<input name="code" type="text"></label>
+                <label>地址：<input name="address" type="text"></label>
+            </form>
+            <div class="result-form-suc" style="display:none;">
+                提交成功！<br/>
+                <div class="btn1 btn-agian" style="margin-top: 38px;">再玩一次</div>
+            </div>
+            <div class="result-failure">
+                请继续挑战有机会获取以下奖品：<br/>
+                <div class="btn1 btn-agian" style="margin-top: 38px;">再玩一次</div>
+            </div>
+          </div>
           <div class="r-share">
+              <span style="float:left;">与好友一起分享：</span>
               <a id="share_sina" target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2455498088" title="分享到新浪微博" class="sina"></a>
-              <a id="share_qzone" target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
-              <a id="share_kaixin" target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>
+              <!--<a id="share_qzone" target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
+              <a id="share_kaixin" target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>-->
               <a id="share_qq" target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
               <a id="share_renren" target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
-              <a id="share_sohu" target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>
+              <a id="share_douban" target="_blank" href="http://shuo.douban.com/!service/share?&amp;href=http://50years911.porsche-events.cn%2f&amp;name=911%2050th" title="分享到豆瓣" class="douban"></a>
+              <!--<a id="share_sohu" target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>-->
           </div>
           <div class="r-close"></div>
-          <div class="r-list">
-          </div>
-          <div class="r-slider">
-            <hr>
-            <hr>
-            <hr>
-          </div>
-          <div class="btn btn-agian" style="margin-top: 360px;"></div>
         </div>
       </div>
     </section>
@@ -195,7 +220,10 @@
             <img src="images/cardot.png" class="b-robot" id="robot-dot" />
           </div>
           <div class="board-m-b">
-            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a target="_blank" id="official-site" href="http://www.porsche.com/china/">保时捷官网</a><a id="ranking" href="javascript:void(0);">排行榜</a>
+            <a href="javascript:void(0);" id="gallery">保时捷911境界</a>
+            <a target="_blank" id="official-site" href="http://www.porsche.com/china/">保时捷官网</a>
+            <a id="rule" href="javascript:void(0);">活动规则</a>
+            <a id="ranking" href="javascript:void(0);">排行榜</a>
           </div>
           <div id="share-wrap">
             <span class="board-r" id="share-btn">分享</span>
@@ -214,7 +242,7 @@
       <div class="main-bottom">
         <a target="_blank" href="http://www.porsche.com/china/">©2013保时捷中国</a> <a target="_blank" href="http://www.porsche.com/china/zh/legal-notice/">法律公告</a>
       </div>
-      <div id="login-status"></div>
+      <!--<div id="login-status"></div>-->
       <div class="main-cars">
         <div class="car my-car">
           <img src="images/car.png" />
@@ -272,6 +300,7 @@
         }
     });
     // get username
+    /*
     $.ajax({
         url: "data/public/index.php/home/checkuser",
         dataType: "JSON",
@@ -289,6 +318,7 @@
 
         }
     });
+*/
 
     var $videoPanel = $('#video-mask');
     var initAnimation = function(){
