--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <li>每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值xx万。</li>
                 <li>为确保能把奖品及时准确送到，请将个人信息填写完整。</li>
             </ul>
-            <div class="btn1 btn-agian" style="margin-top: 11px;margin-left: -21px;margin-right: 30px;">再玩一次</div>
+            <div class="btn1 btn-again" style="margin-top: 11px;margin-left: -21px;margin-right: 30px;">再玩一次</div>
             <div class="btn1 btn-submit" style="margin-top: 11px;">提交信息</div>
         </div>
         <form class="result-form" style="display:none;">
@@ -228,7 +228,7 @@
         </form>
         <div class="result-form-suc" style="display:none;">
             提交成功！<br/>
-            <div class="btn1 btn-agian" style="margin-top: 38px;">再玩一次</div>
+            <div class="btn1 btn-again" style="margin-top: 38px;">再玩一次</div>
         </div>
         <div class="result-failure">
             请继续挑战有机会获取以下奖品：<br/>
@@ -236,7 +236,7 @@
                 1.每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值XXX万。<br/>
                 2.追逐5分钟以上，即可获得保时捷送出的 50 周年限量版明信片。
             </p>
-            <div class="btn1 btn-agian" style="margin-top: 28px;margin-left: 241px;">再玩一次</div>
+            <div class="btn1 btn-again" style="margin-top: 28px;margin-left: 241px;">再玩一次</div>
         </div>
       </div>
       <div class="r-share">
