--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,62 @@
     <link rel="stylesheet" href="./css/base.css">
  </head>
  <body>
+  <section id="result-mask" class="result-mask lpn-mask">
+  <span class="lpn-ghost"></span>
+  <div class="lpn-panel">
+    <div class="result">
+      <div class="result-head">
+        <span class="time1 time00"></span><span class="time2 time10"></span>
+        <span class="time3 time00"></span><span class="time4 time10"></span>
+        <span class="time5 time00"></span><span class="time6 time10"></span>
+      </div>
+      <div class="result-con">
+        <div class="result-tit" >
+            <strong>恭喜您！</strong>
+            <ul>
+                <li>获得保时捷独家送出50周年限量版明信片。</li>
+                <li>每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值xx万。</li>
+                <li>为确保能把奖品及时准确送到，请将个人信息填写完整。</li>
+            </ul>
+            <div class="btn1 btn-agian" style="margin-top: 11px;margin-left: -21px;margin-right: 30px;">再玩一次</div>
+            <div class="btn1 btn-submit" style="margin-top: 11px;">提交信息</div>
+        </div>
+        <form class="result-form" >
+            <label>姓名：<input name="name" type="text"></label>
+            <label>手机：<input name="tel" type="text"></label>
+            <label>邮箱：<input name="email" type="text"></label>
+            <label>邮编：<input name="code" type="text"></label>
+            <label>地址：<input name="address" type="text"></label>
+        </form>
+        <div class="result-form-suc" style="display:none;">
+            提交成功！<br/>
+            <div class="btn1 btn-agian" style="margin-top: 38px;">再玩一次</div>
+        </div>
+        <div class="result-failure" style="display:none;">
+            请继续挑战有机会获取以下奖品：<br/>
+            <p>
+                1.每个月坚持追逐时间最久第一名，可获得保时捷送出的“驾驶学校”课程，价值XXX万。<br/>
+                2.追逐5分钟以上，即可获得保时捷送出的 50 周年限量版明信片。
+            </p>
+            <div class="btn1 btn-agian" style="margin-top: 28px;margin-left: 241px;">再玩一次</div>
+        </div>
+      </div>
+      <div class="r-share">
+          <span style="float:left;">与好友一起分享：</span>
+          <a id="share_sina" target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=911%2050th&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg&amp;appkey=2455498088" title="分享到新浪微博" class="sina"></a>
+          <!--<a id="share_qzone" target="_blank" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到QQ空间" class="qzone"></a>
+          <a id="share_kaixin" target="_blank" href="http://www.kaixin001.com/repaste/share.php?rtitle=Fascination+Porsche+2013&amp;amp;rurl=http://50years911.porsche-events.cn%2f&amp;amp;rcontent=911%2050th" title="分享到开心网" class="kaixing"></a>-->
+          <a id="share_qq" target="_blank" href="http://v.t.qq.com/share/share.php?title=911%2050th&amp;amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到QQ微博" class="qqwb"></a>
+          <a id="share_renren" target="_blank" href="http://share.renren.com/share/buttonshare.do?link=http://50years911.porsche-events.cn%2f&amp;amp;title=911%2050th" title="分享到人人网" class="renren"></a>
+          <a id="share_douban" target="_blank" href="http://shuo.douban.com/!service/share?&amp;href=http://50years911.porsche-events.cn%2f&amp;name=911%2050th" title="分享到豆瓣" class="douban"></a>
+          <!--<a id="share_sohu" target="_blank" href="http://t.sohu.com/third/post.jsp?&amp;url=http://50years911.porsche-events.cn%2f&amp;title=911%2050th" title="分享到搜狐微博" class="tt"></a>-->
+      </div>
+      <div class="r-close"></div>
+    </div>
+  </div>
+</section>
 <!--gallery panel-->
-<section id="gallery-mask" class="gallery-mask lpn-mask">
+<section id="gallery-mask" style="display:none;" class="gallery-mask lpn-mask">
   <span class="lpn-ghost"></span>
   <div class="lpn-panel" style="overflow:visible;">
     <div id="gallery-wrap">
@@ -218,6 +272,70 @@
                   });
           }
       }
+
+
+      seajs.use(['jquery.validate'] , function(){
+        $resultPanel = $('#result-mask');
+
+        var validateConfig = {
+              rules: {
+                  email: {
+                      required: true,
+                      email: true
+                  },
+                  tel: {
+                      required: true,
+                      tel: true
+                  },
+                  name: "required",
+                  code: {
+                      required: true,
+                      number: true
+                  },
+                  address: "required"
+              },
+              messages: {
+                  email: "请输入正确的邮箱",
+                  name: "请输入姓名",
+                  tel: "请输入正确的手机号码",
+                  code: "请输入正确的邮编",
+                  address: "请输入地址"
+              },
+              submitHandler: function (form) {
+                  $.ajax({
+                      url: "data/public/index.php/home/register",
+                      dataType: "JSON",
+                      type: "POST",
+                      data: $(form).serialize(),
+                      success: function(res){
+                          if(res.code == 200){
+                              $(form)
+                                  .parent()
+                                  .children()
+                                  .hide()
+                                  .filter('.result-form-suc')
+                                  .fadeIn();
+                          }
+                      }
+                  });
+                  return false;
+              }
+          };
+          $resultPanel
+              .find('.btn-again')
+              .click(function(){
+                  $resultPanel
+                      .trigger('close');
+              })
+              .end()
+              .find('.btn-submit')
+              .click(function(){
+                  $('.result-form').submit();
+              })
+              .end()
+              .find('.result-form').validate(validateConfig);
+      });
+
       seajs.use( ['jquery.fancybox','jquery.mousewheel'] , function(){
             // init tabs
             selectTag($('#gallery-mask').find('.btn1') , function(){
