--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
  <head>
   <meta charset="utf-8"/>
   <title>911 50周年</title>
-  <meta name="viewport" content="width=1400, minimum-scale=1.0, maximum-scale=1.0" />
-  <title> 2013保时捷极至体验 </title>
   <meta name="viewport" content="width=1024, minimum-scale=1.0, maximum-scale=1.0" />
+  <script type="text/javascript" src="./src/modernizr-2.5.3.min.js"></script>
   <script type="text/javascript"
     src="./lib/sea/sea-debug.js"
     data-config="../../app/config"
